--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "gulp-group-css-media-queries": "^1.2.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-watch": "^4.3.11",
+    "gulp.spritesmith": "^6.5.0",
     "path": "^0.12.7",
-    "stream-combiner2": "^1.1.1",
-    "gulp.spritesmith": "^6.5.0"
+    "stream-combiner2": "^1.1.1"
   }
 }
