добавлена секция путей к файлам тасков

--- a/gulpConfig.json
+++ b/gulpConfig.json
@@ -10,7 +10,8 @@
             "scssDir": "dev/scss/**/*.scss"
         },
         "tasks": {
-            "imgsprite": "./tasks/imgsprite"
+            "imgsprite": "./tasks/imgsprite",
+            "sass": ".tasks/sass"
         }
     },
     "spritesFolder": "sprites",
